oslab/errors.txt
sample.c: In function ‘main’:
sample.c:10:16: warning: missing terminating " character
   10 |         printf("Hello World\n
      |                ^
sample.c:10:16: error: missing terminating " character
   10 |         printf("Hello World\n
      |                ^~~~~~~~~~~~~~
sample.c:11:2: error: expected expression before ‘}’ token
   11 |  }
      |  ^
sample.c:10:16: error: expected ‘;’ before ‘}’ token
   10 |         printf("Hello World\n
      |                ^
      |                ;
   11 |  }
      |  ~              
